# codesteer-atlas

./: .atlasignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  POWER.md  README.md  SECURITY.md  deploy_mcp.py  plugin.json  pyproject.toml  setup.ps1  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.codex/agents/: codesteer.architect.agent.toml  codesteer.code-reviewer.agent.toml  codesteer.critical-bug-hunter.agent.toml  codesteer.debugger.agent.toml  codesteer.implementer.agent.toml  codesteer.kb-evidence-auditor-agent.agent.toml  codesteer.kb-pattern-extractor-agent.agent.toml  codesteer.kb-repo-census-agent.agent.toml  codesteer.knowledge-update.agent.toml  codesteer.orchestrator.agent.toml  codesteer.plan-reviewer.agent.toml  codesteer.planner.agent.toml  codesteer.pr-reviewer.agent.toml  codesteer.product-manager.agent.toml  codesteer.spec-reviewer.agent.toml  codesteer.spec.agent.toml  codesteer.task-breakdown.agent.toml  codesteer.tester.agent.toml  (+1 more)
.github/: dependabot.yml  pull_request_template.md
.memory-bank/: constitution.md
cognitive-base/: README.md
docs/: codesteer-atlas-mindmap-enriquecido.md  codesteer-atlas.prd.md  guia-indexacao-grafo-mcp.md  index.html  site.js  styles.css
knowledge-base/: CONTRIBUTING.md  README.md  index.md
scripts/: benchmark_index.py
tests/: __init__.py  test_chunker.py  test_deploy.py  test_embeddings.py  test_graph.py  test_indexer.py  test_locking.py  test_markdown_links.py  test_rationale.py  test_server.py  test_storage.py  test_viewer.py
(+122 files in other folders)
