[project]
name = "codesteer-atlas"
version = "1.1.0"
description = "Servidor MCP local para busca semântica em bases de código usando LanceDB e Tree-sitter"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "CodeSteer Squad", email = "squad@codesteer.ai" }
]
dependencies = [
    "lancedb>=0.17.0,<0.34.0",
    "fastembed>=0.4",
    "tree-sitter>=0.22.0",
    "tree-sitter-language-pack>=1.8.0",
    "mcp>=0.1.0",
    "fastmcp>=0.4.1",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "numpy>=1.24.0",
    "pathspec>=0.12.0",
    "filelock>=3.12.0",
]

[project.scripts]
indexer = "codesteer_atlas.indexer:cli"
server = "codesteer_atlas.server:main"
atlas-index = "codesteer_atlas.indexer:cli"
atlas-serve = "codesteer_atlas.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
